Chat das academias

--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -66,4 +66,6 @@
       </ul>
     </div>
   </div>
+  <%= link_to 'Ir para o Chat', chat_gym_path(@gym), class: 'btn btn-success rounded-4 w-100 mt-3' %>
+
 </div>
