--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -15,6 +15,11 @@
                 <span>Academias</span>
             <% end %>
 
+            <%= link_to chat_path, class: "footer-link" do %>
+                <%= image_tag "muscle.svg", alt: "Pedidos", class: "footer-icon" %>
+                <span>Meu treino</span>
+            <% end %>
+
             <% if user_signed_in? %>
               <%= link_to my_account_path(current_user), class: "footer-link" do %>
 
