--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,17 +3,121 @@
   background: #000000db;
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+.navbar-lewagon .container-fluid {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 80px;
+.navbar-lewagon .navbar-brand {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
+.navbar-lewagon .btn-menu {
+  font-size: 20px;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
 
-@media (max-width: 402px) {
+.navbar-lewagon .placeholder {
+  width: 50px; /* Placeholder do mesmo tamanho do botão menu */
+}
+
+@media (max-width: 500px) {
   .navbar-lewagon .navbar-brand img {
     width: 120px;
   }
+}
+
+/* Sidenav */
+.sidenav {
+  height: 100%;
+  width: 350px;
+  position: fixed;
+  z-index: 1;
+  top: auto;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  border-radius: 10px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #fff;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+/* Adiciona um espaço para o botão do menu */
+.btn-menu {
+  font-size: 20px;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.btn-menu:focus {
+  outline: none;
+}
+
+.navbar-link {
+  color: #fff;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.navbar-link:hover {
+  color: #f0ad4e;
+}
+
+.account-link .profile-picture {
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  box-shadow: 2px 2px 2px black;
+}
+
+.login-link .login-icon {
+  width: 20px;
+  height: 20px;
+}
+
+.default-profile-icon {
+  opacity: 0.7;
+  width: 40px;
+  height: 40px;
+}
+
+.user-greeting {
+  margin-left: 10px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.navbar-icon {
+  margin-right: 8px;
 }
