--- a/app/views/food_intakes/index.html.erb
+++ b/app/views/food_intakes/index.html.erb
@@ -1,15 +1,21 @@
 <div class="container-food">
+  <!-- Link de retorno para nutri -->
+<%= link_to nutri_food_intakes_path, class: "btn btn-primary mb-4 rounded-right" do %>
+  <i class="fa fa-arrow-left" aria-hidden="true"></i> Voltar para Nutri
+<% end %>
+
   <h1 class="my-4 text-center text-primary">Alimentos Consumidos</h1>
   <h2 class="text-center mb-4 text-secondary">Total de Calorias: <%= @total_calories %> kcal</h2>
 
   <div class="row food-cards">
     <% @food_intakes.each do |food_intake| %>
-      <div class="col-md-4 mb-4 food-card">
+      <div class="col-md-12 mb-4 food-card">
         <div class="card shadow-sm border-0 rounded-3">
           <% if food_intake.product_image.present? %>
-            <%= image_tag food_intake.product_image, class: "card-img-top rounded-top", alt: "Imagem do produto" %>
+            <!-- Reduzindo o tamanho da imagem -->
+            <%= image_tag food_intake.product_image, class: "card-img-top rounded-top img-fluid", alt: "Imagem do produto" %>
           <% else %>
-            <img src="https://via.placeholder.com/150" class="card-img-top rounded-top" alt="Imagem do produto">
+            <img src="https://via.placeholder.com/100" class="card-img-top rounded-top img-fluid" alt="Imagem do produto">
           <% end %>
           <div class="card-body">
             <h5 class="card-title font-weight-bold text-dark"><%= food_intake.product_name %></h5>
