--- a/app/views/water_intakes/new.html.erb
+++ b/app/views/water_intakes/new.html.erb
@@ -8,12 +8,12 @@
 
   <%= form_with(model: @water_intake, local: true) do |form| %>
     <div class="form-group">
-      <%= form.label :amount, "Quantidade de água (em litros):", class: "text-white" %>
+      <%= form.label :amount, "Quantidade de água (em litros):", class: "text-grey" %>
       <%= form.number_field :amount, class: "form-control form-control-lg", step: "0.01", required: true, placeholder: "Digite a quantidade de água" %>
     </div>
 
     <div class="form-group">
-      <%= form.label :date, "Data:", class: "text-white" %>
+      <%= form.label :date, "Data:", class: "text-grey" %>
       <%= form.date_field :date, class: "form-control form-control-lg", value: Date.today %>
     </div>
 
