--- a/app/views/chat_messages/_chat_message.html.erb
+++ b/app/views/chat_messages/_chat_message.html.erb
@@ -1,11 +1,6 @@
 <div class="message mb-3 <%= chat_message.sender == 'user' ? 'text-end' : 'text-start' %>">
-  <div class="<%= chat_message.sender == 'user' ? 'float-end bg-primary text-white' : 'float-start bg-light' %>
-              rounded p-2"
-       style="max-width: 70%; word-wrap: break-word;">
-
+  <div class="<%= chat_message.sender == 'user' ? 'float-end bg-primary text-white' : 'float-start bg-light' %> rounded p-2" style="max-width: 70%; word-wrap: break-word;">
     <%= simple_format(chat_message.content) %>
   </div>
-
-
   <div class="clearfix"></div>
 </div>
