--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -18,3 +18,4 @@ $secondary-color: #2575fc;
 $highlight-color: #00ffb9;
 $text-color: #fff;
 $background-gradient: linear-gradient(135deg, #2b2b2b, #1f1f1f); // Fundo mais escuro
+$gradient-bg: linear-gradient(135deg, #000, #004d33);
