--- a/app/assets/stylesheets/pages/_index_gyms.scss
+++ b/app/assets/stylesheets/pages/_index_gyms.scss
@@ -24,9 +24,9 @@
 }
 
 .search-container {
-  display: grid;
   justify-items: center;
   height: 100px;
+  padding-right: 5px;
 }
 
 .gyms-container {
@@ -64,11 +64,6 @@
     width: 100%;
   }
 
-  .gyms-container {
-    flex-direction: column;
-    align-items: center;
-  }
-
   #query {
     margin-left: 10px;
     width: 340px;
@@ -83,12 +78,7 @@
     align-items: stretch;
   }
 
-  #botoes-index button,
-  #botoes-index a {
-    width: 100%;
-    margin-bottom: 10px;
-  }
-  .button-group{
+  .button-group {
     display: block ruby;
   }
 }
