--- a/app/assets/stylesheets/pages/_show_gyms.scss
+++ b/app/assets/stylesheets/pages/_show_gyms.scss
@@ -11,7 +11,7 @@
   background-color: rgba(0, 0, 0, 0.3);
 }
 .comodidades {
-  background-color: #d3d3d3;
+  background-color: #757474;
 }
 .qtd-alunos {
   width: 40px;
