Ajuste nos botoes

--- a/app/assets/stylesheets/components/_global.scss
+++ b/app/assets/stylesheets/components/_global.scss
@@ -23,3 +23,9 @@ h1 {
   color: $text-color;
   // text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
 }
+.container-index {
+  margin-bottom: 90px !important;
+}
+.rounded-custom {
+  border-radius: 30px;
+}
