--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -10,7 +10,7 @@
                input_html: { multiple: true, class: 'custom-file-input', style: 'border: 2px solid #2B2B2B; padding: 10px; background-color: #f9f9f9;' },
                label_html: { class: 'label-formularios' } %>
 
-    <%= form.submit "Salvar Alterações", class: "btn btn-success w-100" %>
+    <%= form.submit "Salvar Alterações", class: "btn btn-success rounded-custom w-100" %>
   <% end %>
   <% @profiles.each do |profile| %>
   <div class="bg-progresso">
