--- a/app/views/gyms/index.html.erb
+++ b/app/views/gyms/index.html.erb
@@ -9,8 +9,8 @@
 
     <div id="botoes-index" class="d-flex flex-wrap justify-content-between align-items-center mb-3 w-100">
       <div class="button-group w-100 d-flex align-items-center justify-content-between gap-1">
-        <button id="toggleFilterBtn" class="btn btn-success mt-3 mb-3 rounded-4 m-0 w-50">Filtros</button>
-        <%= link_to 'Ver mapa', map_path, class: 'btn btn-success rounded-4 m-0 w-50' %>
+        <button id="toggleFilterBtn" class="btn btn-success mt-3 mb-3 rounded-custom m-0 w-50">Filtros</button>
+        <%= link_to 'Ver mapa', map_path, class: 'btn btn-success rounded-custom m-0 w-50' %>
       </div>
     </div>
   </div>
