--- a/app/views/gyms/map.html.erb
+++ b/app/views/gyms/map.html.erb
@@ -7,8 +7,8 @@
       <button id="search-button" class="btn text-light m-0 w-auto"><i class="fa-solid fa-magnifying-glass"></i></button>
     </div>
     <div class="d-flex w-100 gap-3">
-      <button id="toggle-filters" class="btn btn-success rounded-4 w-50">Filtros</button>
-      <%= link_to 'Ver lista', gyms_path, class: 'view-list-button btn btn-success w-50 rounded-4' %>
+      <button id="toggle-filters" class="btn btn-success rounded-custom w-50">Filtros</button>
+      <%= link_to 'Ver lista', gyms_path, class: 'view-list-button btn btn-success w-50 rounded-custom' %>
     </div>
   </div>
 
