--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -17,10 +17,10 @@
 
       <!-- Exibição do fluxo de alunos -->
       <p class="mt-3 fw-bold text-light">Alunos onGym</p>
+        <p class="mt-3 text-light fw-bold mt-2 fs-2">Fluxo: <span id="fluxo"><%= @fluxo_medio %></span><span id="fluxo-detail">%</span></p>
       <div class="d-flex justify-content-center gap-3">
         <p class="mt-3 text-light">Homens: <%= @fluxo["Male"].to_i %></p>
         <p class="mt-3 text-light">Mulheres: <%= @fluxo["Female"].to_i %></p>
-        <p class="mt-3 text-light">Fluxo: <%= @fluxo_medio %>%</p>
       </div>
     </div>
 
@@ -30,7 +30,7 @@
       <%= f.hidden_field :user_id, value: current_user.id %>
       <%= f.hidden_field :checkin_date, value: Date.today %>
       <%= f.hidden_field :checkin_hour, value: Time.current %>
-      <%= f.submit "Check-in", class: "btn btn-success text-light rounded-4 w-100" %>
+      <%= f.submit "Check-in", class: "btn btn-success text-light rounded-custom w-100" %>
     <% end %>
 
     <!-- Exibição do Carrossel de Imagens -->
@@ -66,6 +66,6 @@
       </ul>
     </div>
   </div>
-  <%= link_to 'Ir para o Chat', chat_gym_path(@gym), class: 'btn btn-success rounded-4 w-100 mt-3' %>
+  <%= link_to 'Ir para o Chat', chat_gym_path(@gym), class: 'btn btn-success rounded-custom w-100 mt-3' %>
 
 </div>
