add db academias.json, implementando academias reais ao seed, add api randomuser para gerar fotos de usuarios

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="overlay"></div>
   <div class="content w-100">
-    <%# <h1>Gym Movement</h1> %>
+    <h1>Gym Movement</h1>
   </div>
   <%# <div class="banner-container">
     <div class="banner">
