--- a/app/assets/stylesheets/pages/_footer.scss
+++ b/app/assets/stylesheets/pages/_footer.scss
@@ -1,4 +1,4 @@
-/* Estilos do Footer */
+/* footer.scss */
 footer {
   background-color: rgba(18, 18, 18, 0.8); /* Fundo escuro com 80% de opacidade */
   color: #fff; /* Texto branco */
@@ -8,6 +8,11 @@ footer {
   width: 100%;
   box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.3);
   z-index: 100;
+  transition: transform 0.3s ease; /* Adiciona uma transição suave */
+}
+
+footer.hidden {
+  transform: translateY(100%); /* Move o footer para fora da vista */
 }
 
 /* Conteúdo do footer */
@@ -76,6 +81,7 @@ footer {
     flex-direction: row;
   }
 }
+
 
 // footer {
 //   bottom: 0;
