--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -15,7 +15,7 @@
                 <span>Academias</span>
             <% end %>
 
-            <%= link_to chat_path, class: "footer-link" do %>
+            <%= link_to user_trainings_path, class: "footer-link" do %>
                 <%= image_tag "muscle.svg", alt: "Pedidos", class: "footer-icon" %>
                 <span>Meu treino</span>
             <% end %>
