--- a/app/views/shared/_mensagem.html.erb
+++ b/app/views/shared/_mensagem.html.erb
@@ -1,11 +1,6 @@
-<div class="notification-container bg-light d-flex justify-content-between align-items-center p-2">
-  <p>Olá! Hoje é dia de atualizar o seu peso.</p>
-  <i class="fa-solid fa-x" data-action="click->notification#closeNotification"></i>
-</div>
-
-<%# <div data-controller="notification" class="bg-light d-flex align-items-center justify-content-center" style="height: 5vh;">
-  <i class="fa-solid fa-x" data-action="click->notification#closeNotification"></i>
-  <div class="text-center p-4">
+<div data-controller="notification" class="bg-light text-dark d-flex align-items-center justify-content-center" style="height: 5vh;">
+  <div class="text-center mt-3 p-4">
       <p>Olá! Hoje é dia de atualizar o seu peso.</p>
   </div>
-</div> %>
+  <i class="fa-solid fa-x" data-action="click->notification#closeNotification"></i>
+</div>
