--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -120,3 +120,31 @@
 .navbar-icon {
   margin-right: 8px;
 }
+
+.nav-link{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #fff;
+    font-size: 0.75rem;
+    transition: transform 0.3s ease, color 0.3s ease;
+    flex: 1;
+    margin-left: 30px;
+}
+
+.nav-link:hover {
+  transform: translateY(-4px);
+}
+
+@media (max-width: 767px) {
+  .sidenav a {
+    font-size: 17px;
+  }
+}
+
+.nav-link img{
+  width: 50px;
+  background-color: #111;
+}
