--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -28,12 +28,12 @@
     <% end %>
   <% end %>
   <br>
-
-  <%= link_to "Nutri", nutri_food_intakes_path, class: "footer-link" %>
+  <%= link_to image_tag("https://res.cloudinary.com/dhkyacden/image/upload/v1734009546/udwqwh8azqt0jeayc5xm.png") + " Nutri", nutri_food_intakes_path, class: "nav-link" %>
   <br>
 
-  <%= link_to "Loja GYM Suplements", "https://gym-suplement-909fe7f2432b.herokuapp.com/", class: "footer-link", target: "_blank", rel: "noopener" %>
+  <%= link_to image_tag("https://www.citypng.com/public/uploads/preview/white-outline-market-store-shop-icon-free-png-701751694972760dqodlqpysl.png") + " Loja GYM Suplements", "https://gym-suplement-909fe7f2432b.herokuapp.com/", class: "nav-link", target: "_blank", rel: "noopener" %>
   <br>
 
-  <a href="#" class="footer-link">Contact</a>
+  <%= link_to image_tag("https://res.cloudinary.com/dhkyacden/image/upload/v1734010444/b6wglbsuwzd4060utflw.png") + " Contatos", nutri_food_intakes_path, class: "nav-link" %>
+  <br>
 </div>
