add contatos e estilizando filters

--- a/app/assets/stylesheets/components/_filter.scss
+++ b/app/assets/stylesheets/components/_filter.scss
@@ -12,3 +12,16 @@
   background-color: #28a745;
   color: white;
 }
+
+#filter-list-form{
+background-color: rgb(201, 252, 205);
+}
+
+#h6-filter{
+  color: black;
+  font-weight: bold;
+}
+
+#max_lotacao_value{
+  font-weight: bold;
+}
