--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -34,6 +34,6 @@
   <%= link_to image_tag("https://www.citypng.com/public/uploads/preview/white-outline-market-store-shop-icon-free-png-701751694972760dqodlqpysl.png") + " Loja GYM Suplements", "https://gym-suplement-909fe7f2432b.herokuapp.com/", class: "nav-link", target: "_blank", rel: "noopener" %>
   <br>
 
-  <%= link_to image_tag("https://res.cloudinary.com/dhkyacden/image/upload/v1734010444/b6wglbsuwzd4060utflw.png") + " Contatos", nutri_food_intakes_path, class: "nav-link" %>
+  <%= link_to image_tag("https://res.cloudinary.com/dhkyacden/image/upload/v1734010444/b6wglbsuwzd4060utflw.png") + " Contatos", new_contact_path, class: "nav-link" %>
   <br>
 </div>
