--- a/app/views/shared/_filter.html.erb
+++ b/app/views/shared/_filter.html.erb
@@ -1,13 +1,13 @@
 <aside class="filters bg-light p-3 rounded" id="filterSection" style="display: none; position: relative; z-index: 1000;">
-  <%= form_with url: gyms_path, method: :get, local: true do %>
+  <%= form_with url: gyms_path, method: :get, id: 'filter-list-form', local: true do %>
 
-    <h6>Lotação Minima</h6>
+    <h6 id="h6-filter">Lotação Minima</h6>
     <div class="mb-3">
       <%= range_field_tag :max_lotacao, params[:max_lotacao] || 100, in: 0..100, step: 1, class: "form-range", id: "max_lotacao_slider" %>
       <p class="small">até <span id="max_lotacao_value"><%= params[:max_lotacao] || 100 %></span>%</p>
     </div>
 
-    <h6>Comodidades</h6>
+    <h6 id="h6-filter">Comodidades</h6>
     <div class="comodies mb-3 d-flex flex-wrap gap-2">
       <% ["Estacionamento","Piscina", "Ar-condicionado", "Armarios", "Sauna", "Lanchonete", "Wi-fi", "Chuveiro", "Bicicletario"].each do |amenity| %>
         <%= check_box_tag "amenities[]", amenity, params[:amenities]&.include?(amenity), id: "amenities_#{amenity}", class: "d-none amenity-checkbox" %>
