--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,9 @@
     <%= render "shared/flashes" %>
 
     <%if current_user.present? %>
-      <%= turbo_frame_tag "notification" do %>
+      <%= turbo_frame_tag "notification" %>
        <%#= render "shared/mensagem" %>
-      <% end %>
-      <%= turbo_stream_from current_user %>
+      <%= turbo_stream_from "root_notifications" if current_page?(root_path) %>
     <% end %>
     <%= yield %>
     <%= render "pages/footer" %>
