--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,3 +1,5 @@
+<div class="chat-container" data-controller="chat alert" data-user-trainings-path="<%= user_trainings_path %>">
+
 <div class="container">
   <h1 class="text-center mt-4 mb-4 text-light">Meu Desempenho</h1>
 
@@ -52,4 +54,6 @@
       <%#= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
     <%# end %>
   <% end %>
+</div>
+
 </div>
