--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <div id="navbar" data-turbo-permanent>
+    <div id="navbar" data-turbo-permanent data-controller="sidenav">
       <%= render "shared/navbar" %>
     </div>
     <%= render "shared/flashes" %>
